<resources>
    <string name="app_name">Calculator</string>
    <string name="editText1">Number One</string>
    <string name="editText2">Number Two</string>
    <string name="add"> + </string>
    <string name="sub"> - </string>
    <string name="multiply"> * </string>
    <string name="div"> / </string>
    <string name="one"> 1 </string>
    <string name="two"> 2 </string>
    <string name="three"> 3 </string>
    <string name="four"> 4 </string>
    <string name="five"> 5 </string>
    <string name="six"> 6 </string>
    <string name="seven"> 7 </string>
    <string name="eight"> 8 </string>
    <string name="nine"> 9 </string>
    <string name="zero"> 0 </string>
    <string name="equal"> = </string>
    <string name="clear"> Clear </string>
    <string name="history"> History </string>
    <string name="history_page">History Page</string>
    <string name="back">Back</string>
    <string name="historyClear">Clear</string>
</resources>
