<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity"
    android:orientation="vertical"
    android:paddingLeft="30sp"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_page"
        android:textSize="30sp"
        android:textStyle="bold"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/historyClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historyClear"
            android:textSize="30sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/historyDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="15"


            />

    </ScrollView>
</LinearLayout>